updated to version 1.0.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@react-native-component/react-native-smart-touch-id",
-  "version": "1.0.4",
+  "name": "react-native-smart-touch-id",
+  "version": "1.0.5",
   "description": "Smart authentication with the native Touch ID popup for React Native app",
   "main": "TouchId.js",
   "scripts": {
